@@ -1,6 +1,12 @@
 2010-07-19  d+w3m@vdr.jp
 
 	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
+	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=537706#10
+	* rc.c (interpret_rc): check line->length before call Strchop().
+
+2010-07-19  d+w3m@vdr.jp
+
+	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
 	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=366284#5
 	* rc.c (init_rc): check config_file is NULL or not.
 	(panel_set_option): check config_file instead of no_rc_dir.
@@ -9005,4 +9011,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.1012 2010/07/19 12:19:54 htrb Exp $
+$Id: ChangeLog,v 1.1013 2010/07/19 12:25:53 htrb Exp $
